# etl-dep-viz

./: .databricksignore  .dockerignore  .gitignore  Application_Details.md  CLAUDE.md  DBappv5.md  Dockerfile  Makefile  README.md  REMAINING_WORK.md  V11_Complexity_Report.md  app.yaml  docker-compose.yml  infra-upgrade.md  v3fix.md
backend/: alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/engines/: algorithm_lab_engine.py  anomaly_detector.py  constellation_engine.py  data_populator.py  databricks_auth.py  databricks_embeddings.py  databricks_llm.py  dbfs_reader.py  document_generator.py  effort_estimator.py  embedding_engine.py  indexing_pipeline.py  infa_engine.py  infrastructure.py  nifi_tier_engine.py  parse_coordinator.py  pg_vector_store.py  query_engine.py  semantic.py  transpiler.py  vector_store.py
backend/app/exports/: databricks_scaffold.py  excel_workbook.py  lineage_export.py
backend/tests/: conftest.py  locustfile.py  test_active_tags_api.py  test_chat_engine.py  test_code_analysis.py  test_compare_api.py  test_data_model.py  test_dbfs_reader.py  test_drill_through.py  test_exports_api.py  test_feature_extractor.py  test_health_api.py  test_infa_engine.py  test_integration_e2e.py  test_layers_api.py  test_layers_flow.py  test_lineage_api.py  test_nifi_engine.py  test_orchestrator.py  test_projects_api.py  test_scale_benchmarks.py  test_tier_map_api.py  test_users_api.py  test_v11_complexity.py  test_v1_community.py  test_v4_topological.py  test_vectors_api.py
databricks-app/: DEPLOY.md  (+8 more)
(+137 files in other folders)
